Migrating to the web cast sender app for testing

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+    <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.min.js"></script>
     <title>App Chromecast</title>
 </head>
 <body>
-    <script src="/app.js"></script>
-    <cast-media-player id="player"></cast-media-player>
+    <script>
+        window['__onGCastApiAvailable'] = function(isAvailable) {
+    if (isAvailable) {
+      initializeCastApi();
+    }
+  };
+
+  function initializeCastApi() {
+    const context = cast.framework.CastContext.getInstance();
+    context.setOptions({
+      receiverApplicationId: '7BE3B01C',
+      autoJoinPolicy: chrome.cast.AutoJoinPolicy.ORIGIN_SCOPED
+    });
+  }
+
+  const castButton = document.getElementById("castButton");
+  castButton.addEventListener("click", () => {
+    const castContext = cast.framework.CastContext.getInstance();
+    castContext.requestSession().then(() => {
+      console.log("Conectado ao Chromecast!");
+    }).catch((error) => {
+      console.log("Erro ao conectar:", error);
+    });
+  });
+
+  function loadMedia() {
+    console.warn("botao ativo")
+    const mediaInfo = new chrome.cast.media.MediaInfo("https://www.eitvplay.com.br/videos/36", "video/mp4");
+    const request = new chrome.cast.media.LoadRequest(mediaInfo);
+
+    cast.framework.CastContext.getInstance().getCurrentSession()
+      .loadMedia(request)
+      .then(() => {
+        console.log("Mídia carregada com sucesso!");
+      })
+      .catch((error) => {
+        console.log("Erro ao carregar mídia:", error);
+      });
+  }
+
+  function pauseMedia() {
+    const session = cast.framework.CastContext.getInstance().getCurrentSession();
+    if (session) {
+      const media = session.getMediaSession();
+      media.pause();
+    }
+  }
+
+  function playMedia() {
+    const session = cast.framework.CastContext.getInstance().getCurrentSession();
+    if (session) {
+      const media = session.getMediaSession();
+      media.play();
+    }
+  }
+
+  function stopCasting() {
+    const castContext = cast.framework.CastContext.getInstance();
+    castContext.endCurrentSession(true);
+  }
+    </script>
+     <button id="castButton">Transmitir para Chromecast</button>
+     <button onclick="loadMedia()">Carregar Mídia</button>
+     <button onclick="playMedia()">Play</button>
+     <button onclick="pauseMedia()">Pause</button>
+     <button onclick="stopCasting()">Parar Transmissão</button>
     
 </body>
 </html>
