--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.min.js"></script>
     <title>App Chromecast</title>
 </head>
 <body>
-    <script src="app.js"></script>
-    <cast-media-player id="player"></cast-media-player>
+    <script src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
+    <script src="/public/app.js"></script>
+    <h1>Sender App para Chromecast</h1>
+    <button onclick="loadMedia()">Carregar Mídia</button>
+    <button onclick="playMedia()">Play</button>
+    <button onclick="pauseMedia()">Pause</button>
+    <button onclick="stopCasting()">Parar Transmissão</button>
+    <div class="teste">
+        <google-cast-launcher id="castButton"></google-cast-launcher>
+    </div>
+    
+   
     
 </body>
 </html>
